# cryostorage

./: .gitignore  setup.md
.github/workflows/: book_release.yml
controller/agilent_4uhv/: Cargo.toml
controller/agilent_4uhv/src/: lib.rs
controller/cryotelgt/: Cargo.toml
controller/cryotelgt/examples/: tcpip-cryotelgt.rs
controller/firmware/: Cargo.toml
controller/firmware/src/: app.rs  baking.rs  broadcaster.rs  flow.rs  flow_meter.rs  handlers.rs  main.rs  status.rs  valve.rs  vct.rs
controller/host/: Cargo.toml  Cross.toml  build.rs  justfile
controller/host/src/: app.rs  connections.rs  controller.rs  dialog.rs  logger.rs  main.rs  prg_config.rs  rotation.rs  samples.rs  status.rs  vacuum_history.rs
controller/host/src/controller/: client.rs  mod.rs
controller/host/src/instruments/: cryocooler.rs  hi_cube.rs  ion_pump.rs  lakeshore_temp.rs  mod.rs  omnicontrol.rs  utils.rs
controller/host/src/log/: logger.rs  mod.rs
controller/host/src/plots/: measurements.rs  mod.rs  pressures.rs  temperatures.rs
controller/host/src/status/: controller_impls.rs  instruments_impls.rs  mod.rs  workflow_impls.rs
controller/host/src/workflows/: baking.rs  cooler.rs  mod.rs  valves.rs
controller/host/ui/: consts.slint  dialog.slint  elements.slint  helpers.slint  keyboard.slint  keypad.slint  logic.slint  main.slint  palette.slint  samples.slint  screen_cryo.slint  screen_home.slint  screen_settings.slint  screen_vacuum.slint  workflow_progress.slint
controller/icd/: Cargo.toml
controller/icd/src/: baking.rs  flow_meter.rs  lib.rs  light.rs  valve.rs  vct.rs
controller/instrumentRs/: Cargo.toml
controller/instrumentRs/src/: lib.rs
controller/lakeshore_336/: Cargo.toml
controller/pfeiffer_hicube/: Cargo.toml  README.md
controller/pfeiffer_hicube/examples/: listen_and_write.rs
controller/pfeiffer_hicube/src/: lib.rs  pump_commands.rs
controller/pfeiffer_omnicontrol/: Cargo.toml
controller/pfeiffer_omnicontrol/examples/: serial_connection.rs
controller/pfeiffer_omnicontrol/src/: cmd_package.rs  lib.rs  lib_utils.rs
docs/: book.toml
docs/src/: SUMMARY.md  gui.md  intro.md  overview.md  safety.md  setup.md  tips_tricks.md  vct.md  workflows.md
docs/src/graphics/: overview_diagram.mono  vct_handshake.mono
microcontroller/schematic/cryostorage_controller_v1/: cryostorage_controller_v1.csv  cryostorage_controller_v1.kicad_pcb  cryostorage_controller_v1.kicad_prl  cryostorage_controller_v1.kicad_pro  cryostorage_controller_v1.kicad_sch  cryostorage_controller_v1.xml
microcontroller/schematic/cryostorage_controller_v1/gerber/: cryostorage_controller_v1-B_Cu.gbr  cryostorage_controller_v1-B_Mask.gbr  cryostorage_controller_v1-B_Paste.gbr  cryostorage_controller_v1-B_Silkscreen.gbr  cryostorage_controller_v1-Edge_Cuts.gbr  cryostorage_controller_v1-F_Cu.gbr  cryostorage_controller_v1-F_Mask.gbr  cryostorage_controller_v1-PTH.drl  (+6 more)
pcb_controller/: cryocooler_safety.kicad_sch  cryostorage_controller_v1.kicad_pcb  cryostorage_controller_v1.kicad_prl  cryostorage_controller_v1.kicad_pro  cryostorage_controller_v1.kicad_sch  cryostorage_controller_v1.ods  fp-info-cache  gate_valves.kicad_sch  ~cryostorage_controller_v1.kicad_sch.lck
pcb_controller/.history/: cryocooler_safety.kicad_sch  cryostorage_controller_v1.kicad_sch  gate_valves.kicad_sch
pcb_controller/.kinotes/: cryostorage_controller_v1_worklog_20260212.md
pcb_controller/.kinotes/backups/: 20260212_152318_KiNotes_pcb_controller.md  20260212_152323_KiNotes_pcb_controller.md  20260212_152328_KiNotes_pcb_controller.md  20260212_152333_KiNotes_pcb_controller.md  20260212_152338_KiNotes_pcb_controller.md  20260212_152343_KiNotes_pcb_controller.md  20260212_152348_KiNotes_pcb_controller.md  20260212_152353_KiNotes_pcb_controller.md  20260212_152354_settings.json  20260212_152354_todos.json
pcb_controller/jlcpcb/: project.db
pcb_controller/jlcpcb/gerber/: cryostorage_controller_v1-CuBottom.gbr  cryostorage_controller_v1-CuTop.gbr  cryostorage_controller_v1-EdgeCuts.gbr  cryostorage_controller_v1-MaskBottom.gbr  cryostorage_controller_v1-MaskTop.gbr  cryostorage_controller_v1-NPTH.drl  cryostorage_controller_v1-PTH.drl  cryostorage_controller_v1-SilkBottom.gbr  cryostorage_controller_v1-SilkTop.gbr
pcb_controller/jlcpcb/production_files/: BOM-cryostorage_controller_v1.csv  CPL-cryostorage_controller_v1.csv
reterminal/: cryostorage.sh  toggle_taskbar.sh  update.sh
sandbox/hw_checks/: Cargo.toml
sandbox/hw_checks/src/: handlers.rs  main.rs
sandbox/icd/src/: lib.rs
ui/: main.slint  screen_cryo.slint  screen_home.slint  screen_settings.slint
(+12 files in other folders)
