[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow          = "1.0.100"
async-compat    = "0.2.5"
chrono          = { version = "0.4.42", features = ["serde"] }
icd             = { path = "../icd", version = "0.1.0" }
measurements    = { version = "0.11.1", features = ["serde", "std"] }
plotters        = { version = "0.3.5", default-features = false, features = [
                      "bitmap_backend",
                      "chrono",
                      "line_series",
                      "ttf"
                    ]}
poststation-sdk = "0.4.1"
ron             = "0.11.0"
serde           = { version = "1.0.226", features = ["derive"] }
serde-hex       = "0.1.0"
serialport      = "4.8.1"
slint           = "1.14.1"
tokio           = { version = "1.47.1", features = ["macros", "rt"] }

pfeiffer_hicube = { version = "0.1.0", path = "../pfeiffer_hicube" }

# Temperary!
agilent_4uhv = { path = "../agilent_4uhv", version = "0.1.0" }
sunpower_cryotelgt = { path = "../cryotelgt", version = "0.1.0" }
lakeshore_336     = { path = "../lakeshore_336", version = "0.1.0" }
pfeiffer-omnicontrol = { path = "../pfeiffer_omnicontrol", version = "0.1.0" }
instrumentrs    = { path = "../instrumentRs", version = "0.1.0" }


[build-dependencies]
slint-build     = "1.14.1"
