[package]
name = "instrumentrs"
version = "0.1.0"
authors = ["Reto Trappitsch <reto@galactic-forensics.space>"]
edition= "2024"
repository = "https://github.com/trappitsch/instrumentRs/tree/main/instrumentRs"
description = "A library for standardized control of (scientific) instruments from Rust."

[dependencies]
thiserror       = "2.0"
serialport      = { version = "4.8.1", optional = true }

[features]
serial = ["serialport"]
